STM32CubeIDE/.metadata/.plugins/org.eclipse.cdt.ui/tactGenerator.build.log
14:34:35 **** Incremental Build of configuration Debug for project tactGenerator ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../USB_DEVICE/Target -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -I../USB_DEVICE/App -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:106:12: error: 'UserRxBufferFS' undeclared (first use in this function); did you mean 'UserRx_Buffer'?
    memcpy(&UserRxBufferFS, UserRx_Buffer, 64);
            ^~~~~~~~~~~~~~
            UserRx_Buffer
../Core/Src/main.c:106:12: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:97:11: warning: unused variable 'usbStatus' [-Wunused-variable]
   uint8_t usbStatus = 1;
           ^~~~~~~~~
../Core/Src/main.c:96:12: warning: unused variable 'timeDelay' [-Wunused-variable]
   uint16_t timeDelay = 1000;
            ^~~~~~~~~
../Core/Src/main.c:95:11: warning: unused variable 'RawComPortData' [-Wunused-variable]
   uint8_t RawComPortData[2];
           ^~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

14:34:35 Build Failed. 2 errors, 3 warnings. (took 577ms)

